# CloudGL

./: .gitignore  AUTHORS  CMakeLists.txt  CloudGL-config.cmake  README.md
deploy/: CMakeLists.txt
source/: CMakeLists.txt
source/broker/: CMakeLists.txt  main.cpp
source/client/: CMakeLists.txt  CloudGLClient.cpp  CloudGLClient.h  CloudGLClient.ui  CreateSessionDialog.cpp  CreateSessionDialog.h  CreateSessionDialog.ui  main.cpp
source/common/: CMakeLists.txt  SharedMemoryDevice.cpp  SharedMemoryDevice.h  common.h
source/common/include/common/: SharedMemoryDevice.h
source/common/source/: SharedMemoryDevice.cpp  common.cpp
source/glwrapper/: CMakeLists.txt
source/server/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt
source/tests/common-test/: CMakeLists.txt  common_test.cpp
source/wrapper/: CMakeLists.txt
source/wrapper/cli/: CMakeLists.txt
source/wrapper/dispatch/: CMakeLists.txt
source/wrapper/gui/: CMakeLists.txt
source/wrapper/helpers/: CMakeLists.txt
source/wrapper/inject/: CMakeLists.txt
source/wrapper/lib/guids/: CMakeLists.txt
source/wrapper/lib/os/: CMakeLists.txt
source/wrapper/lib/trace/: CMakeLists.txt
source/wrapper/retrace/: CMakeLists.txt
source/wrapper/wrappers/: CMakeLists.txt
